k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: i27-helpdesk-ui
  namespace: ${NAMESPACE}
spec:
  selector:
    app: i27-helpdesk-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 32320
  type: NodePort
